      of the underlying Column objects.  Direct 
      Column objects such as Query(table.c.col) will
      return the "key" attribute of the Column.

    - Improved the determination of the FROM clause
      when placing SQL expressions in the query()
      list of entities.  In particular scalar subqueries
      should not "leak" their inner FROM objects out
      into the enclosing query.
    
    - Fixed @on_reconsitute hook for subclasses 
      which inherit from a base class.
      [ticket:1129]

    - The composite() property type now supports
      a __set_composite_values__() method on the composite
      class which is required if the class represents
      state using attribute names other than the 
      column's keynames; default-generated values now
      get populated properly upon flush.  Also,
      composites with attributes set to None compare
      correctly.  [ticket:1132]
      
- sql
    - Temporarily rolled back the "ORDER BY" enhancement
      from [ticket:1068].  This feature is on hold 
      pending further development.

0.5beta3
========
    - 0.5beta3 includes all bugfixes listed under release
      "0.4.7".

- orm
    - The "entity_name" feature of SQLAlchemy mappers
      has been removed.  For rationale, see
      http://tinyurl.com/6nm2ne
     
    - the "autoexpire" flag on Session, sessionmaker(),
      and scoped_session() has been renamed to 
      "expire_on_commit".  It does not affect 
      the expiration behavior of rollback().
    
    - fixed endless loop bug which could occur
      within a mapper's deferred load of 
      inherited attributes.
      
    - a legacy-support flag 
      "_enable_transation_accounting" flag added
      to Session which when False, disables
      all transaction-level object accounting,
      including expire on rollback, expire 
      on commit, new/deleted
      list maintenance, and autoflush on begin.
      
    - The 'cascade' parameter to relation() accepts None